--- a/src/content/blog/welcome.mdx
+++ b/src/content/blog/welcome.mdx
@@ -13,29 +13,27 @@ This blog will cover topics I'm passionate about:
 
 ### AI Agents & Computer Use
 
-Building agents that can reliably interact with the real world — especially user interfaces — is one of the most exciting frontiers in AI. I've been working on this problem at Amazon AGI, and there's so much to explore around how we can make these systems more robust, generalizable, and aligned with human intentions.
+Building agents that can reliably interact with the real world is one of the most exciting frontiers in AI. I've been working on this problem at Amazon AGI SF Lab, and there's so much to explore around how we can make these systems more robust, generalizable, and aligned with human intentions.
 
 ### Reinforcement Learning
 
-RL is at the heart of my research. From my PhD work comparing human and machine planning, to training production models like [Nova Act](https://aws.amazon.com/blogs/aws/build-reliable-ai-agents-for-ui-workflow-automation-with-amazon-nova-act-now-generally-available/), I've seen how powerful — and challenging — RL can be. I'll share insights on what works, what doesn't, and where the field is heading.
+RL is at the heart of my research. From my PhD work of using RL in game environments to training production models like [Nova Act](https://aws.amazon.com/blogs/aws/build-reliable-ai-agents-for-ui-workflow-automation-with-amazon-nova-act-now-generally-available/), I've seen how powerful (and challenging!) RL can be. I'll share insights on what works, what doesn't, and where the field is heading.
 
 ### Human-AI Interaction
 
-My background in computational neuroscience gives me a unique lens on AI. Understanding how humans plan and make decisions can inform how we build better AI systems. I'll write about the cognitive science perspective on intelligence.
+I believe some of the real secret sauce still lives in the human brain - how we plan, learn from sparse feedback, form explanations, and adapt under uncertainty. I hope to write about the cognitive science perspective on intelligence.
 
-### LLM Post-Training
-
-Fine-tuning and RLHF are crucial for making language models useful and safe. I'll share thoughts on the craft of post-training and what makes models actually good at tasks.
 
 ## Why Write?
 
 A few reasons:
 
-1. **Thinking in public** — Writing forces clarity. It helps me understand what I actually know versus what I think I know.
+1. **Thinking in public** — Writing forces clarity. It helps me separate what I know from what I *assume* 
 
-2. **Building in public** — I want to share the messy reality of research, not just the polished papers.
+2. **Building in public** — I want to share the messy reality of research, not just the polished papers and products.
+3. **Making space to think** — During the industrial revolution, physical labor was replaced, and people started going to the gym to deliberately train their bodies. Now we’re watching a similar shift for mental labor. This blog is my version of “going to the gym”: making time to slow down, think deeply, reflect, and write so I don’t outsource all my thinking to the machine.
 
-3. **Connecting** — Some of the best collaborations come from putting ideas out there.
+4. **Connecting** — Some of the best collaborations come from putting ideas out there.
 
 ## Stay Tuned
 
